# AIT

./: .dockerignore  .gitignore  AUTH_BUTTONS_IMPLEMENTATION.md  AUTH_IMPLEMENTATION.md  BUILD_AND_DEPLOY.bat  BUILD_AND_DEPLOY.sh  DEBUG_STEPS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NOW.md  Dockerfile  HEROKU_DEPLOY.md  LICENSE  MANIFEST.in  OAUTH_SETUP.md  OAUTH_TROUBLESHOOTING.md  QUICKSTART.md  README.md  ai_tester.db  app.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_auth.py  test_oauth.py  test_oauth_real.py
ai_tester/: __init__.py
static/: auth.css  auth.js  history.css  history.js  profile.css  profile.js  script.js  settings.css  settings.js  styles.css  testcases.css  testcases.js  user-auth.js
templates/: debug.html  history.html  index.html  login.html  oauth_setup.html  profile.html  settings.html  signup.html  testcases.html
