[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tester"
version = "1.0.0"
description = "AI-powered code testing and analysis platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["testing", "code-analysis", "ai", "flask", "web-app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
]
dependencies = [
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-tester"
Documentation = "https://github.com/yourusername/ai-tester/wiki"
Repository = "https://github.com/yourusername/ai-tester"
"Bug Tracker" = "https://github.com/yourusername/ai-tester/issues"

[project.scripts]
ai-tester = "app:main"

[tool.setuptools]
py-modules = ["app", "database", "oauth_config"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/*.*", "static/**/*"]
